--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Subscriber</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="icon"><i class="far fa-envelope"></i></div>
+        <div class="content">
+            <header>Subscriber</header>
+            <p>Подписка най мой ГитХаб и получение последних обновлений</p>
+        </div>
+        <form action="#">
+            <div class="field">
+                <input type="text" placeholder="Email Address" required>
+            </div>
+            <div class="field btn">
+                <input type="submit" value="Подписаться">
+            </div>
+        </form>
+        <div class="info">Мы не делимся вашей информацией.</div>
+    </div>
 </body>
 </html>
