--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <div class="icon"><i class="far fa-envelope"></i></div>
         <div class="content">
             <header>Subscriber</header>
-            <p>Подписка най мой ГитХаб и получение последних обновлений</p>
+            <p>Подписка на мой ГитХаб и получение последних новостей</p>
         </div>
         <form action="#">
             <div class="field">
-                <input type="text" placeholder="Email Address" required>
+                <input type="text" placeholder="Введите ваш email" required>
             </div>
             <div class="field btn">
                 <input type="submit" value="Подписаться">
             </div>
         </form>
-        <div class="info">Мы не делимся вашей информацией.</div>
+        <div class="info">Ваша информация остается конфиденциальной</div>
     </div>
 </body>
 </html>
